Upgrade to PHP 7.4

--- a/docker/configs/php.ini
+++ b/docker/configs/php.ini
@@ -10,4 +10,4 @@ cgi.force_redirect=on
 cgi.fix_pathinfo=0
 daemonize=yes
 catch_workers_output=yes
-extension=/usr/src/php-opencv/modules/opencv.so
+ffi.enable=1
