--- a/docker/configs/supervisord.conf
+++ b/docker/configs/supervisord.conf
@@ -19,7 +19,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///dev/shm/supervisor.sock
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm7.1 -F
+command=/usr/local/sbin/php-fpm -F
 autostart=true
 autorestart=true
 priority=1
