--- a/docker/configs/www.conf
+++ b/docker/configs/www.conf
@@ -1,6 +1,5 @@
 [global]
-pid = /run/php/php7.1-fpm.pid
-error_log = /var/log/php7.1-fpm.log
+error_log = /var/log/php-fpm.log
 syslog.facility = daemon
 syslog.ident = php-fpm
 log_level = notice
@@ -9,7 +8,7 @@ daemonize = yes
 [www]
 user = www-data
 group = www-data
-listen = /var/run/php/php7.1-fpm.sock
+listen = 127.0.0.1:9000
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
